--- a/example_config.yaml
+++ b/example_config.yaml
@@ -43,29 +43,29 @@ external_components:
 
 # Logger configuration
 logger:
-  level: DEBUG
+  level: INFO  # Use DEBUG only for development
 
 # Enable Home Assistant API
 api:
   encryption:
-    key: "YQyUKJ2x2K3hhaW2n8Y7kQmVJR9GQHQ2PkXRpCYYNWk="
+    key: !secret api_encryption_key
 
 # OTA updates
 ota:
   - platform: esphome
-    password: "changeme123"
+    password: !secret ota_password
 
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   ap:
-    ssid: "Chair-Display Fallback Hotspot"
-    password: "xzQ3MxpXU8jM"
+    ssid: "VIEWE-Display Fallback"
+    password: !secret ap_password  # Use a strong password in secrets.yaml
 
 
-# Web server disabled to save space
-web_server:
-   port: 80
+# Web server - consider disabling in production or adding authentication
+# web_server:
+#   port: 80
 
 
 # Display configuration using custom component with LVGL
